feat(Styles): Ajuste na configuração de tailwind, e no css, NextUiProvider agora usa router para passar estilos por parametro

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -26,6 +26,16 @@
 ::-webkit-scrollbar-thumb:hover {
 	background-color: #6c5c09;
 }
+/*
+Example With custom prefix
+.my-component {
+  padding: var(--euromanaus-spacing-unit-4);
+  font-size: var(--euromanaus-font-size-small);
+  line-height: var(--euromanaus-line-height-small);
+  border-radius: var(--euromanaus-radius-medium);
+}
+*/
+
 
 /*
 @media (prefers-color-scheme: dark) {
